47512 Search does not bring up all results

--- a/bundles/org.eclipse.platform.doc.user/tasks/tsearch.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tsearch.htm
@@ -60,7 +60,8 @@ Double-click a result to open the help browser to that topic.
       On the other hand:</p>
     <pre>par*</pre>
     <p>returns topics that contain <i>part</i>, <i>park</i>, <i>participate</i>,
-      <i>pardon</i>, and so on.</li>
+      <i>pardon</i>, and so on. <b>Note:</b> The search engine does not accept
+      terms with a wild card at first character position.</li>
   <li>Use double quotation marks around terms you want treated as a phrase. For 
     example: 
     <pre>&quot;creating projects&quot;</pre>
