Bug 50512  [RCP] Where is IEditorRegistry's getEditors(IFile) ?

--- a/bundles/org.eclipse.platform.doc.isv/porting/eclipse_3_0_porting_guide.html
+++ b/bundles/org.eclipse.platform.doc.isv/porting/eclipse_3_0_porting_guide.html
@@ -384,6 +384,7 @@ up the dependencies, and help to determine a minimal set.)</p>
     <ul>
       <li>public IEditorDescriptor getDefaultEditor(IFile file)</li>
       <li>public void setDefaultEditor(IFile file, String editorId)</li>
+      <li>public IEditorDescriptor[] getEditors(IFile file)</li>
       <li>public ImageDescriptor getImageDescriptor(IFile file)</li>
     </ul>
   </li>
@@ -398,6 +399,9 @@ up the dependencies, and help to determine a minimal set.)</p>
         id)</li>
     </ul>
   </li>
+  <li>Clients that call getEditors(file) should call the
+    &quot;String&quot; equivalent method. Thus rewrite getEditors(file)
+    to be getEditors(file.getName())</li>
   <li>The API contract for the following method was changed:
     <ul>
       <li>public IEditorDescriptor getDefaultEditor() is now deprecated. It will
